--- a/index.html
+++ b/index.html
@@ -29,8 +29,23 @@
             </div1>
             
             <div2>
-                <h2>Our Headquarter</h2>
-                <h3 class="lingkaran1">Jakarta</h3>
+                <table>
+                    <tr>
+                        <th>
+                            <h2>Our Headquarter</h2>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><div class="lingkaran1"></div></td>
+                        <td colspan="2"><div class="lingkaran1"></div></td>
+                        <td colspan="2"><div class="lingkaran1"></div></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">Jakarta</td>
+                        <td colspan="2">Bandung</td>
+                        <td colspan="2">Surabaya</td>
+                    </tr>
+                </table>
             </div2>    
         </main>
         <main class="content2">
