Ubah Nama Folder

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
         <title>My Website</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="js/script.js"></script>
-        <link rel="stylesheet" href="css/style.css">
-        <style>
-            
-        </style>
+        <script src="JS/script.js"></script>
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
         <nav class="container">
