--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>My Website</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="JS/script.js"></script>
+        <script src="js/script.js"></script>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
